manifests/deployments-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producerapp-deployment
  namespace: nsadadevopsmod3
  labels:
    app: producerapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producerapp
  template:
    metadata:
      labels:
        app: producerapp
    spec:
      containers:
      - name: producerapp
        image: localhost:5000/adadevopsmod3:baseapp
        command: ["python3", "/appfiles/producer.py"]
        volumeMounts:
        - name: python-files-volume
          mountPath: /appfiles
        resources:
          limits:
            memory: 256Mi
            cpu: "0.4"
          requests:
            memory: 128Mi
            cpu: "0.2"
      volumes:
      - name: python-files-volume
        persistentVolumeClaim:
          claimName: python-files-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumerapp-deployment
  namespace: nsadadevopsmod3
  labels:
    app: consumerapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumerapp
  template:
    metadata:
      labels:
        app: consumerapp
    spec:
      containers:
      - name: consumerapp
        image: localhost:5000/adadevopsmod3:baseapp
        command: ["python3", "/appfiles/consumer.py"]
        volumeMounts:
        - name: python-files-volume
          mountPath: /appfiles
        resources:
          limits:
            memory: 256Mi
            cpu: "0.4"
          requests:
            memory: 128Mi
            cpu: "0.2"
      volumes:
      - name: python-files-volume
        persistentVolumeClaim:
          claimName: python-files-pvc
