manifests/services.yaml
# Criando Minio Service
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: nsadadevopsmod3
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  - name: console  
    port: 9001
    targetPort: 9001
  type: ClusterIP
  selector:
    app: minio

---
# Criando Redis Service
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: nsadadevopsmod3
spec:
  ports:
  - name: console
    port: 6379
    targetPort: 6379
  - name: http
    port: 8001
    targetPort: 8001
  type: ClusterIP
  selector:
    app: redis

---
# Criando RabbitMQ Service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: nsadadevopsmod3
spec:
  ports:
  - name: api
    port: 5672
    targetPort: 5672
  - name: http
    port: 15672
    targetPort: 15672
  selector:
    app: rabbitmq
